# antonenko

./: CMakeLists.txt  README.md  main.c  sonar-project.properties
.github/workflows/: build.yml
1_laba_2s/: 1.txt  2.txt  CMakeLists.txt  filmi_velichaishego.txt  main.c  structure.c  structure.h  test.txt
1laba_2s/: CMakeLists.txt  main.c
1laba_2s/mylib/: CMakeLists.txt  check.c  check.h  memory.c  memory.h  menu.c  menu.h  parce.c  parce.h  sort.c  sort.h  structure.c  structure.h  structure_TV.h
2laba/: CMakeLists.txt  main.c
2laba/decompressor/: functions.c
2laba_2s/decompressor/: functions.h
2laba_2s/lyb/: functions.c  functions.h
3laba_2s/: functions.c  functions.h
4laba_2s/: functions.c  functions.h  main.c
4laba_2s/lyb/: check.c  check.h  chrono.c  chrono.h  memory.c  memory.h  menu.c  menu.h  query.c  query.h  tree.c  tree.h  tree_srucutre.h
5laba_2s/: ip_test.c
5laba_2s/lyb/: cache.c  cache.h  checks.c  checks.h  functions.c  functions.h  memory.c  memory.h  menu.c  menu.h  other.c  other.h  structures.h
laba1/: 1.c  2.c  3.c  4.c  CMakeLists.txt
laba2/: 1.c  2.c  3.c  CMakeLists.txt
laba3/: 1.c  2.c  3.c  CMakeLists.txt  mass_functions.c  mass_functions.h
laba4/: 1.c  2.c  3.c  CMakeLists.txt  mass_functions.c  mass_functions.h
laba5/: 1.c  2.c  3.c  CMakeLists.txt  arrays.c  arrays.h
laba6/: 1.c  2.c  CMakeLists.txt  arrays.c  arrays.h
laba7/: 1.c  2.c  3.c  4.c  CMakeLists.txt  arrays.c  arrays.h  gematogosha.c
laba8/: 3.c  arrays.h
